# broai-arai

./: README.md  docker-compose.yml
backend/: .dockerignore  01-offlineflow.ipynb  02-onlineflow.ipynb  dev.ipynb  lambda.ipynb  pyproject.toml  test-term.ipynb
backend/dataset/: benchmark.csv  experiments.csv  trainset.json
backend/images/bedrock-postgres/: Dockerfile  requirements.txt
backend/images/bedrock-postgres/app/: lambda_function.py
backend/images/bedrock-postgres/app/package/agents/: context_enricher.py  core.py  jargon_extractor.py
backend/images/bedrock-postgres/app/package/databases/: destroy.py  utils.py
backend/images/bedrock-postgres/app/package/llm/: ollama.py
backend/images/enrich/: requirements.txt
backend/images/enrich/app/: lambda_function.py
backend/images/enrich/app/package/: interface.py
backend/images/term/: Dockerfile
backend/images/term/app/: README.md  lambda_function.py
backend/package/agents/: term_detector.py
backend/package/config/: settings.py
backend/package/cross_encoder/: cross_encoder.py
backend/package/databases/: destroy.py  engine.py  initialize.py
backend/package/databases/management/: document.py  jargon.py  longterm.py  manage.py  project.py  user.py
backend/package/databases/models/: __init__.py  audit_log.py  document.py  jargon.py  longterm.py  project.py  project_document_link.py  user.py
backend/package/embedding/: baai.py
backend/package/flows/: offline.py
backend/package/prompt/: core.py  utils.py
backend/package/utils/: data_loder.py
(+28 files in other folders)
